# codec-patch-stream

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
benchmark/: benchmark_codec_apis.py  compare_codec_vs_decord.py  decode_vs_patch_stream.py
codec_patch_stream/: __init__.py  _decode_core.py  _patch_stream_core.py  api_decode.py  api_patch.py  decoder.py  native_backend.py  stream.py  types.py
cpp/codec_patch_stream/: CMakeLists.txt
cpp/codec_patch_stream/backends/cpu/: decode_executor_ffmpeg_cpu.cpp
cpp/codec_patch_stream/backends/gpu/: decode_executor_nvdec.cpp  nv12_to_rgb_kernels.cu
cpp/codec_patch_stream/core/: decode_core.h  decode_core_cpu.cpp  decode_core_gpu.cpp  decode_postprocess.cpp  decode_types.h
cpp/codec_patch_stream/include/: codec_patch_stream.h  codec_patch_stream_cpu.h
cpp/codec_patch_stream/patch/: energy_cpu.cpp  energy_gpu.cu  extract_cpu.cpp  extract_gpu.cu  patch_stream_engine_cpu.cpp  patch_stream_engine_gpu.cpp
cpp/codec_patch_stream/src/: demux_decode_ffmpeg_cpu.cpp  demux_decode_nvdec.cpp  patch_select_cpu.cpp  patch_select_kernels.cu  stream_engine.cpp  stream_engine_cpu.cpp
examples/: benchmark.py  demo_patch_stream.py
python/: codec_patch_stream_pybind.cpp  codec_patch_stream_pybind_backend_common.h  codec_patch_stream_pybind_cpu.cpp  codec_patch_stream_pybind_gpu.cpp
