[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codec-patch-stream"
version = "0.2.0"
description = "GPU-native video patch stream loader"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["codec_patch_stream"]
