[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codec-patch-stream"
version = "0.4.0"
description = "Video patch stream loader with CPU/GPU native backends"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["codec_patch_stream"]
